# qtAudioAndVideoStreamOutput

Qt/: 说明.txt
Qt-FFmpeg/: README.md
Qt-GStreamer/: GStreamer相关.txt  README.md
Qt-GStreamer/QtGStrmPipe-main/: CMakeLists.txt  main.cpp
Qt-GStreamer/杂项s/: GStreamer学习笔记.docx
Qt-GStreamer/杂项s/GstHelloWorld/: 编译报错：缺少gst.h。解决方案
Qt/GrabToImage/: CMakeLists.txt  GstStreamer.cpp  GstStreamer.h  Main.qml  main.cpp
Qt/GrabToImage & Save as FFmpeg/: CMakeLists.txt  CMakeLists.txt.user.eb7cc77  main.cpp  video1详细信息.txt  videorecorder.cpp  videorecorder.h
